apps/prowlarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prowlarr
  labels:
    app.kubernetes.io/name: prowlarr
